--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: 1.0.2
   firebase_core: 2.10.0
   firebase_analytics: 10.2.1
+  firebase_crashlytics: 3.1.1
 
 dev_dependencies:
   flutter_test:
