--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: 2.10.0
   firebase_analytics: 10.2.1
   firebase_crashlytics: 3.1.1
+  cloud_firestore: ^4.5.3
 
 dev_dependencies:
   flutter_test:
