--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: 1.0.2
   firebase_core: 2.10.0
   firebase_analytics: 10.2.1
   firebase_crashlytics: 3.1.1
   cloud_firestore: ^4.5.3
+  firebase_messaging: ^14.4.1
 
 dev_dependencies:
   flutter_test:
