--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   firebase_crashlytics: 3.1.1
   cloud_firestore: ^4.5.3
   firebase_messaging: ^14.4.1
+  firebase_remote_config: ^4.0.2
+  package_info_plus: ^4.0.2
 
 dev_dependencies:
   flutter_test:
